# autoamting_full_tests

./: .gitignore  CMakeLists.txt  README.md  generate_cmakelists.py  run_tests.py
.github/workflows/: generate_cmakelists.yaml  run_tests.yaml
complex_tests/: CMakeLists.txt  rdinit.cpp
dynarr_tests/: CMakeLists.txt  rdinit.cpp
dynarray_tests/: CMakeLists.txt  rdinit.cpp
rational_tests/: CMakeLists.txt  rdinit.cpp
